Fix CSS reference in pedidos.html

--- a/templates/pedidos.html
+++ b/templates/pedidos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo de Productos - Style & Essence</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='sabor.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='Sabor.css') }}">
 </head>
 <body>
     <header>
